@@ -71,7 +71,6 @@ import java.util.Arrays;
 import java.util.Collection;
 import java.util.Collections;
 import java.util.HashMap;
-import java.util.List;
 import java.util.Map;
 
 import static org.elasticsearch.action.support.WriteRequest.RefreshPolicy.IMMEDIATE;
@@ -284,19 +283,19 @@ public class DocumentLevelSecurityTests extends SecurityIntegTestCase {
 
     public void testRealtimeGetApi() {
         assertAcked(client().admin().indices().prepareCreate("test")
-                .setMapping("field1", "type=text", "field2", "type=text", "field3", "type=text")
+                .addMapping("type1", "field1", "type=text", "field2", "type=text", "field3", "type=text")
                 .setSettings(Settings.builder().put("refresh_interval", "-1").build())
         );
         final boolean realtime = true;
         final boolean refresh = false;
 
-        client().prepareIndex("test").setId("1").setSource("field1", "value1").get();
-        client().prepareIndex("test").setId("2").setSource("field2", "value2").get();
+        client().prepareIndex("test", "type1", "1").setSource("field1", "value1").get();
+        client().prepareIndex("test", "type1", "2").setSource("field2", "value2").get();
         // do a realtime get beforehand to flip an internal translog flag so that subsequent realtime gets are
         // served from the translog (this first one is NOT, it internally forces a refresh of the index)
         client().prepareMultiGet()
-                .add("test", "1")
-                .add("test", "2")
+                .add("test", "type1", "1")
+                .add("test", "type1", "2")
                 .setRealtime(realtime)
                 .setRefresh(refresh)
                 .get();
@@ -304,14 +303,16 @@ public class DocumentLevelSecurityTests extends SecurityIntegTestCase {
         // updates don't change the doc visibility for users
         // but updates populate the translog and the DLS filter must apply to the translog operations as well
         if (randomBoolean()) {
-            client().prepareIndex("test").setId("1").setSource("field1", "value1", "field3", "value3")
+            client().prepareIndex("test", "type1", "1").setSource("field1", "value1", "field3", "value3")
                     .setRefreshPolicy(WriteRequest.RefreshPolicy.NONE).get();
-            client().prepareIndex("test").setId("2").setSource("field2", "value2", "field3", "value3")
+            client().prepareIndex("test", "type1", "2").setSource("field2", "value2", "field3", "value3")
                     .setRefreshPolicy(WriteRequest.RefreshPolicy.NONE).get();
         } else {
-            client().prepareUpdate("test", "1").setDoc(Map.of("field3", "value3"))
+            Map<String, Object> doc = new HashMap<>();
+            doc.put("field3", "value3");
+            client().prepareUpdate("test", "type1", "1").setDoc(doc)
                     .setRefreshPolicy(WriteRequest.RefreshPolicy.NONE).get();
-            client().prepareUpdate("test", "2").setDoc(Map.of("field3", "value3"))
+            client().prepareUpdate("test", "type1", "2").setDoc(doc)
                     .setRefreshPolicy(WriteRequest.RefreshPolicy.NONE).get();
         }
 
@@ -321,7 +322,7 @@ public class DocumentLevelSecurityTests extends SecurityIntegTestCase {
         if (randomBoolean()) {
             getResponse = client()
                     .filterWithHeader(Collections.singletonMap(BASIC_AUTH_HEADER, basicAuthHeaderValue("user1", USERS_PASSWD)))
-                    .prepareGet("test", "2")
+                    .prepareGet("test", "type1", "2")
                     .setRealtime(realtime)
                     .setRefresh(refresh)
                     .get();
@@ -330,7 +331,7 @@ public class DocumentLevelSecurityTests extends SecurityIntegTestCase {
             mgetResponse = client()
                     .filterWithHeader(Collections.singletonMap(BASIC_AUTH_HEADER, basicAuthHeaderValue("user1", USERS_PASSWD)))
                     .prepareMultiGet()
-                    .add("test", "2")
+                    .add("test", "type1", "2")
                     .setRealtime(realtime)
                     .setRefresh(refresh)
                     .get();
@@ -340,7 +341,7 @@ public class DocumentLevelSecurityTests extends SecurityIntegTestCase {
         if (randomBoolean()) {
             getResponse = client()
                     .filterWithHeader(Collections.singletonMap(BASIC_AUTH_HEADER, basicAuthHeaderValue("user2", USERS_PASSWD)))
-                    .prepareGet("test", "1")
+                    .prepareGet("test", "type1", "1")
                     .setRealtime(realtime)
                     .setRefresh(refresh)
                     .get();
@@ -349,7 +350,7 @@ public class DocumentLevelSecurityTests extends SecurityIntegTestCase {
             mgetResponse = client()
                     .filterWithHeader(Collections.singletonMap(BASIC_AUTH_HEADER, basicAuthHeaderValue("user2", USERS_PASSWD)))
                     .prepareMultiGet()
-                    .add("test", "1")
+                    .add("test", "type1", "1")
                     .setRealtime(realtime)
                     .setRefresh(refresh)
                     .get();
@@ -359,7 +360,7 @@ public class DocumentLevelSecurityTests extends SecurityIntegTestCase {
         if (randomBoolean()) {
             getResponse = client()
                     .filterWithHeader(Collections.singletonMap(BASIC_AUTH_HEADER, basicAuthHeaderValue("user1", USERS_PASSWD)))
-                    .prepareGet("test", "1")
+                    .prepareGet("test", "type1", "1")
                     .setRealtime(realtime)
                     .setRefresh(refresh)
                     .get();
@@ -367,7 +368,7 @@ public class DocumentLevelSecurityTests extends SecurityIntegTestCase {
         } else {
             getResponse = client()
                     .filterWithHeader(Collections.singletonMap(BASIC_AUTH_HEADER, basicAuthHeaderValue("user2", USERS_PASSWD)))
-                    .prepareGet("test", "2")
+                    .prepareGet("test", "type1", "2")
                     .setRealtime(realtime)
                     .setRefresh(refresh)
                     .get();
@@ -529,17 +530,17 @@ public class DocumentLevelSecurityTests extends SecurityIntegTestCase {
 
     public void testPercolateQueryWithIndexedDocWithDLS() {
         assertAcked(client().admin().indices().prepareCreate("query_index")
-                .setMapping("message", "type=text", "query", "type=percolator", "field1", "type=text", "field2", "type=text")
+                .addMapping("type1", "message", "type=text", "query", "type=percolator", "field1", "type=text", "field2", "type=text")
         );
         assertAcked(client().admin().indices().prepareCreate("doc_index")
-                .setMapping("message", "type=text", "field1", "type=text")
+                .addMapping("type1", "message", "type=text", "field1", "type=text")
         );
-        client().prepareIndex("query_index").setId("1")
+        client().prepareIndex("query_index", "type1", "1")
                 .setSource("{\"field1\": \"value1\", \"field2\": \"value2\", \"query\": " +
                                 "{\"match\": {\"message\": \"bonsai tree\"}}}",
                         XContentType.JSON)
                 .setRefreshPolicy(IMMEDIATE).get();
-        client().prepareIndex("doc_index").setId("1")
+        client().prepareIndex("doc_index", "type1", "1")
                 .setSource("{\"field1\": \"value1\", \"message\": \"A new bonsai tree in the office\"}",
                         XContentType.JSON)
                 .setRefreshPolicy(IMMEDIATE).get();
@@ -547,7 +548,7 @@ public class DocumentLevelSecurityTests extends SecurityIntegTestCase {
         SearchResponse result = client()
                 .filterWithHeader(Collections.singletonMap(BASIC_AUTH_HEADER, basicAuthHeaderValue("user1", USERS_PASSWD)))
                 .prepareSearch("query_index")
-                .setQuery(new PercolateQueryBuilder("query", "doc_index", "1", null, null, null))
+                .setQuery(new PercolateQueryBuilder("query", "doc_index", "type1", "1", null, null, null))
                 .get();
         assertSearchResponse(result);
         assertHitCount(result, 1);
@@ -563,24 +564,24 @@ public class DocumentLevelSecurityTests extends SecurityIntegTestCase {
         ResourceNotFoundException e = expectThrows(ResourceNotFoundException.class, () -> client()
                 .filterWithHeader(Collections.singletonMap(BASIC_AUTH_HEADER, basicAuthHeaderValue("user2", USERS_PASSWD)))
                 .prepareSearch("query_index")
-                .setQuery(new PercolateQueryBuilder("query", "doc_index", "1", null, null, null))
+                .setQuery(new PercolateQueryBuilder("query", "doc_index", "type1", "1", null, null, null))
                 .get());
         assertThat(e.getMessage(), is("indexed document [doc_index/1] couldn't be found"));
     }
 
     public void testGeoQueryWithIndexedShapeWithDLS() {
         assertAcked(client().admin().indices().prepareCreate("search_index")
-                .setMapping("search_field", "type=shape", "field1", "type=text", "field2", "type=text")
+                .addMapping("type1", "search_field", "type=shape", "field1", "type=text", "field2", "type=text")
         );
         assertAcked(client().admin().indices().prepareCreate("shape_index")
-                .setMapping("shape_field", "type=shape", "field1", "type=text", "field2", "type=text")
+                .addMapping("type1", "shape_field", "type=shape", "field1", "type=text", "field2", "type=text")
         );
-        client().prepareIndex("search_index").setId("1")
+        client().prepareIndex("search_index", "type1", "1")
                 .setSource("{\"field1\": \"value1\", \"field2\": \"value2\", \"search_field\": " +
                                 "{ \"type\": \"point\", \"coordinates\":[1, 1] }}",
                         XContentType.JSON)
                 .setRefreshPolicy(IMMEDIATE).get();
-        client().prepareIndex("shape_index").setId("1")
+        client().prepareIndex("shape_index", "type1", "1")
                 .setSource("{\"field1\": \"value1\", \"shape_field\": " +
                                 "{ \"type\": \"envelope\", \"coordinates\": [[0, 2], [2, 0]]}}",
                             XContentType.JSON)
@@ -631,34 +632,34 @@ public class DocumentLevelSecurityTests extends SecurityIntegTestCase {
 
     public void testTermsLookupOnIndexWithDLS() {
         assertAcked(client().admin().indices().prepareCreate("search_index")
-                .setMapping("search_field", "type=keyword", "field1", "type=text", "field2", "type=text")
+                .addMapping("type1", "search_field", "type=keyword", "field1", "type=text", "field2", "type=text")
         );
         assertAcked(client().admin().indices().prepareCreate("lookup_index")
-                .setMapping("lookup_field", "type=keyword", "field1", "type=text", "field2", "type=text")
+                .addMapping("type1", "lookup_field", "type=keyword", "field1", "type=text", "field2", "type=text")
         );
-        client().prepareIndex("search_index").setId("1").setSource("field1", "value1", "search_field",
-                List.of("value1", "value2", "value3"))
+        client().prepareIndex("search_index", "type1", "1").setSource("field1", "value1", "search_field",
+                Arrays.asList("value1", "value2", "value3"))
                 .setRefreshPolicy(IMMEDIATE)
                 .get();
-        client().prepareIndex("search_index").setId("2").setSource("field1", "value1", "field2", "value2", "search_field",
-                List.of("value1", "value2"))
+        client().prepareIndex("search_index", "type1", "2").setSource("field1", "value1", "field2", "value2", "search_field",
+                Arrays.asList("value1", "value2"))
                 .setRefreshPolicy(IMMEDIATE)
                 .get();
-        client().prepareIndex("search_index").setId("3").setSource("field1", "value1", "field2", "value1", "search_field", "value1")
+        client().prepareIndex("search_index", "type1", "3").setSource("field1", "value1", "field2", "value1", "search_field", "value1")
                 .setRefreshPolicy(IMMEDIATE)
                 .get();
-        client().prepareIndex("search_index").setId("4").setSource("field2", "value2", "search_field", "value1")
+        client().prepareIndex("search_index", "type1", "4").setSource("field2", "value2", "search_field", "value1")
                 .setRefreshPolicy(IMMEDIATE)
                 .get();
-        client().prepareIndex("search_index").setId("5").setSource("field2", "value2", "search_field", List.of("value1", "value2"))
+        client().prepareIndex("search_index", "type1", "5").setSource("field2", "value2", "search_field", Arrays.asList("value1", "value2"))
                 .setRefreshPolicy(IMMEDIATE)
                 .get();
-        client().prepareIndex("lookup_index").setId("1").setSource("field1", "value1", "field2", "value1", "lookup_field",
-                List.of("value1", "value2"))
+        client().prepareIndex("lookup_index", "type1", "1").setSource("field1", "value1", "field2", "value1", "lookup_field",
+                Arrays.asList("value1", "value2"))
                 .setRefreshPolicy(IMMEDIATE)
                 .get();
-        client().prepareIndex("lookup_index").setId("2").setSource("field1", "value2", "field2", "value2", "lookup_field",
-                List.of("value2"))
+        client().prepareIndex("lookup_index", "type1", "2").setSource("field1", "value2", "field2", "value2", "lookup_field",
+                Arrays.asList("value2"))
                 .setRefreshPolicy(IMMEDIATE)
                 .get();
 
